--- a/style.css
+++ b/style.css
@@ -198,27 +198,60 @@ a:hover {
     margin-bottom: 400px;
 }
 
-.square {
-    display: inline-block;
-    background-color: #2B3348;
-    width: 106px;
-    height: 106px;
-    margin-top: 120px;
-    border-radius: 10px;
-}
-
-.dark {
-    background-color: #2B3348;
-}
-
-.light {
-    background-color: #FDEE91;
-}
-
 .weare {
     display: flex;
-    gap: 86px;
-    justify-content: space-between;
+    justify-content: center;
+    gap: 150px;
+    margin-top: 120px;
+    flex-wrap: nowrap;
+}
+
+.square {
+    width: 106px;
+    height: 106px;
+    border-radius: 10px;
+    transition: transform 0.3s ease, box-shadow 0.3s ease, filter 0.3s ease;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+}
+
+.square img {
+    width: 90px;
+    height: auto;
+}
+
+.square.dark {
+    background-color: #2B3348;
+}
+
+.square.light {
+    background-color: #FA996B;
+}
+
+.square:hover {
+    transform: scale(1.1);
+    box-shadow: 0 8px 15px rgba(0, 0, 0, 0.2);
+    filter: brightness(1.1);
+}
+
+.care-text {
+    text-align: center;
+    font-size: 18px;
+    margin-top: 40px;
+    color: #2B3348;
+    max-width: 600px;
+    margin-left: auto;
+    margin-right: auto;
+    opacity: 0;
+    transform: translateY(10px);
+    transition: opacity 0.5s ease, transform 0.5s ease;
+    font-family: "Montserrat", sans-serif;
+}
+.care-text.show {
+    opacity: 1;
+    transform: translateY(0);
 }
 
 .bestitle {
@@ -438,9 +471,12 @@ a:hover {
     font-size: 18px;
     font-weight: 800px;
     box-shadow: none;
-    margin-top: 20px;
     cursor: pointer;
     margin-left: 900px;
+    margin-top: 200px;
+    position: absolute;
+    z-index: 50;
+
 }
 .donatebtn:hover{
     background-color: #f6e366;
@@ -454,7 +490,7 @@ a:hover {
 
 .don {
     width: 560px;
-    margin-top: 80px;
+    margin-top: 300px;
 
 }
 
@@ -482,12 +518,20 @@ a:hover {
 }
 
 .textdon {
-    margin-top: 200px;
+    margin-top: -600px;
+}
+.catplay {
+    margin-left: 800px;
+    margin-top: -100px;
+    width: 400px;
+    position: relative;
+    top: 250px;
+    
 }
 
 .imgline {
     margin-left: -100px;
-    margin-top: -680px;
+    margin-top: -530px;
     margin-bottom: 200px;
 
 }
@@ -554,6 +598,7 @@ a:hover {
     transition: transform 0.3s, opacity 0.3s;
     opacity: 1;
 }
+
 
 .button-line {
     display: flex;
@@ -754,6 +799,180 @@ body.menu-open {
     margin-left: 450px;
     margin-top: -70px;
 }
+.shopan {
+    font-size: 48px;
+    color: #2B3348;
+    font-family: "Hammersmith One", sans-serif;
+    text-align: center;
+    margin-top: -95px;
+}
+
+.button-line {
+    margin-top: 95px;
+    display: flex;
+    gap: 270px;
+    justify-content: space-between;
+}
+
+.button-shop {
+    padding: 10px 37px;
+    font-weight: 200;
+    border-radius: 10px;
+    font-size: 32px;
+    font-family: "Hammersmith One", sans-serif;
+    cursor: pointer;
+    background-color: #f6e366;
+    color: #2B3348;
+}
+
+.btncolor {
+    background-color: #2B3348;
+    color: #f6e366;
+}
+
+.animal-gallery {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 270px;
+}
+
+.row {
+    display: flex;
+    gap: 200px;
+    transition: opacity 0.5s ease;
+}
+
+.animal-card {
+    width: 270px;
+    height: 270px;
+    border-radius: 10px;
+    background-color: #ccc;
+    transition: transform 0.3s, opacity 0.3s;
+    opacity: 1;
+}
+
+.animal-card.base {
+    background-color: #2B3348;
+}
+
+.animal-card img {
+    transform: scale(0.95);
+    opacity: 0;
+    transition: transform 0.4s ease, opacity 0.4s ease;
+}
+
+.animal-card img.visible {
+    transform: scale(1);
+    opacity: 1;
+}
+
+.animal-card img.hidden {
+    transform: scale(0.95);
+    opacity: 0;
+}
+.modal {
+    display: none;
+    position: fixed;
+    z-index: 999;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgba(0, 0, 0, 0.6);
+    animation: fadeIn 0.3s ease-in-out;
+}
+
+.modal-content {
+    background-color: #fff;
+    margin: 8% auto;
+    padding: 30px 25px;
+    border-radius: 20px;
+    width: 90%;
+    max-width: 420px;
+    box-shadow: 0 8px 20px rgba(0, 0, 0, 0.2);
+    position: relative;
+    animation: scaleUp 0.4s ease-in-out;
+    text-align: center;
+}
+.modal-content h3, p{
+    color: #2B3348;
+    font-family: "Montserrat", sans-serif;
+
+}
+
+@keyframes fadeIn {
+    from {opacity: 0;}
+    to {opacity: 1;}
+}
+
+@keyframes scaleUp {
+    0% {
+        transform: scale(0.7);
+    }
+    100% {
+        transform: scale(1);
+    }
+}
+
+.close-btn,
+.close-btn-confirm {
+    position: absolute;
+    top: 12px;
+    right: 18px;
+    font-size: 24px;
+    cursor: pointer;
+    color: #999;
+    font-weight: bold;
+    transition: color 0.3s;
+}
+
+.close-btn:hover,
+.close-btn-confirm:hover {
+    color: #FA996B;
+}
+
+.donation-form label {
+    display: block;
+    text-align: left;
+    margin-bottom: 5px;
+    font-weight: 600;
+    color: #2B3348;
+    font-family: "Montserrat", sans-serif;
+
+}
+
+.donation-form input {
+    width: 100%;
+    padding: 12px;
+    margin-bottom: 18px;
+    border: 1px solid #ccc;
+    border-radius: 10px;
+    font-size: 16px;
+}
+
+
+.submit-donation {
+    background-color: #FA996B;
+    border: none;
+    color: white;
+    padding: 12px 25px;
+    border-radius: 10px;
+    cursor: pointer;
+    font-size: 16px;
+    font-weight: bold;
+    width: 100%;
+    transition: 0.3s;
+}
+
+.submit-donation:hover {
+    background-color: #f6e366;
+    color: #2B3348;
+}
+
+
+
 
 
 
@@ -968,91 +1187,111 @@ body.menu-open {
 section {
     animation: fadeIn 1s ease-in-out;
 }
-/* Mobile (до 768px) */
 @media (max-width: 768px) {
-    .container {
-        padding: 10px;
+
+    .dog {
+        display: none;
+    }
+
+ 
+    .nav-links {
+        display: none;
+    }
+
+ 
+    .hero, .subtitle, .cta-button, .main-title, .decorative-text, 
+    .bestitle, .shopan, .stay, .login2, .donatemot,
+    .textdon, .titlewhy, .textwhy, .whyyou, .kidness {
+        text-align: center;
+        margin-left: auto !important;
+        margin-right: auto !important;
+    }
+
+    .cta-button,
+    .btn-log,
+    .btn-log2,
+    .donatebtn,
+    .button-shop {
+        margin-left: auto !important;
+        margin-right: auto !important;
+        display: block;
+    }
+    .titlewhy {
+        max-width: 90%;
+        text-align: center;
+    }
+    .kidness {
+        text-align: center;
+        max-width: 90%;
+    }
+    .donationmotivation {
+        text-align: center;
+        margin-left: 40px;
+    }
+    .donatemot {
+        text-align: center;
+    }
+
+
+    .logo {
+        text-align: center;
+        width: 100%;
+        font-size: 28px;
     }
 
     header {
         flex-direction: column;
-        align-items: flex-start;
-        padding: 10px 0;
+        align-items: center;
     }
 
-    .nav-links {
-        flex-direction: column;
-        gap: 20px;
-        margin: 0;
-        padding: 10px 0;
-    }
-
-    .logo {
-        font-size: 24px;
-    }
-
+ 
     .dog-title {
-        font-size: 64px;
-        margin: 0 auto 10px;
-        text-align: center;
-    }
-
-    .subtitle,
-    .cta-button {
-        margin: 0 auto;
-        text-align: center;
-        display: block;
+        font-size: 48px;
+        margin: 0 auto 20px auto;
     }
 
     .subtitle {
-        font-size: 20px;
+        font-size: 18px;
         margin-bottom: 20px;
-    }
-
-    .cta-button {
-        font-size: 16px;
-        padding: 12px 20px;
-    }
-
-    .dog,
-    .pet1,
-    .cutedog,
-    .imgline,
-    .decorative-box,
-    .yellowbl,
-    .bluebl,
-    .orangebl,
-    .goldog,
-    .human,
-    .cr1 {
-        display: none; /* скрываем сложные элементы на мобильных */
-    }
-
-    .bestitle,
-    .shopan,
-    .stay,
-    .login2 {
-        font-size: 28px;
-        text-align: center;
+        white-space: normal;
     }
 
     .login-space {
         width: 90%;
-        margin: 0 auto;
+        margin: 50px auto;
     }
 
-    .donatebtn {
-        margin: 20px auto;
-        display: block;
+    .btn-log2 {
+        margin-left: 0;
+        margin-top: 15px;
     }
 
-    .animal-gallery {
-        gap: 100px;
-    }
-
-    .row {
+    .button-line {
         flex-direction: column;
-        gap: 40px;
+        gap: 20px;
+        align-items: center;
+        margin: 30px 0;
+    }
+    .whyyou {
+        max-width: 90%;
+    }
+
+    .line-img,
+    .imgline,
+    .pet1,
+    .cutedog,
+    .goldog,
+    .yellowbl,
+    .bluebl,
+    .orangebl,
+    .decorative-box,
+    .img2,
+    .human {
+        display: none;
+    }
+
+    .don {
+        width: 90%;
     }
 
     .socialbox {
@@ -1062,73 +1301,46 @@ section {
     }
 
     .textt {
-        margin-left: 0;
+        margin: 0 auto 30px auto;
         text-align: center;
+    }
+
+    .social-media {
+        margin: 100px -20px -30px -20px;
+        padding: 50px 20px;
     }
 
     .footimg {
-        margin-left: auto;
-        margin-right: auto;
-        display: block;
-        width: 70%;
-    }
-
-    .button-line {
-        flex-direction: column;
-        gap: 20px;
-    }
-}
-
-/* Tablet (от 769px до 1024px) */
-@media (max-width: 1024px) {
-    .nav-links {
-        gap: 20px;
-    }
-
-    .dog-title {
-        font-size: 100px;
-        margin-right: 0;
-        text-align: center;
-    }
-
-    .subtitle {
-        font-size: 24px;
-        margin: 0 auto;
-        text-align: center;
-    }
-
-    .cta-button {
-        margin: 0 auto;
-        display: block;
-    }
-
-    .login-space {
-        margin: 50px auto;
         width: 80%;
+        margin: 30px auto 0 auto;
     }
 
-    .donatebtn {
-        margin-left: auto;
-        margin-right: auto;
-        display: block;
-    }
-
-    .animal-gallery .row {
+    .animal-gallery {
         gap: 100px;
     }
 
-    .cutedog,
-    .goldog,
-    .imgline,
-    .pet1,
-    .yellowbl,
-    .orangebl,
-    .bluebl {
-        display: none;
+    .row {
+        flex-direction: column;
+        gap: 50px;
+        align-items: center;
     }
 
-    .socialbox {
-        flex-wrap: wrap;
-        justify-content: center;
+    .animal-card {
+        width: 80%;
+        height: auto;
+    }
+
+    .btnlang {
+        margin: 10px auto;
+        display: block;
+    }
+
+    .nav-links2 {
+        width: 100%;
+        right: -100%;
+    }
+
+    .nav-links2.active {
+        right: 0;
     }
 }
