--- a/style.css
+++ b/style.css
@@ -1314,7 +1314,8 @@ section {
     .news, 
     .kidness,
     .donationmotivation,
-    .donatemot {
+    .donatemot,
+    .circle {
         display: none;
     }
     .login2 {
